[package]
name = "data_structure_traits"
version = "0.1.1"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["data", "structure", "collection", "collections", "traits"]
description = "data structure collection traits"
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/nathanfaucett/rs-data_structure_traits.git"
homepage = "https://gitlab.com/nathanfaucett/rs-data_structure_traits"

[dependencies]
[dev-dependencies]

[features]
use_std = []
default = ["use_std"]
